forms-flow-idm/infra/test/ingress_test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forms-flow-idm-nginx
  namespace: forms-flow-idm
  #annotations:
   # kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - host: "smkeycloak-test"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: forms-flow-idm-svc
            port:
              number: 80
